--- a/convenience-client/package.json
+++ b/convenience-client/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "pinia": "^2.0.11",
+    "sass": "^1.49.4",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.18",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
