--- a/convenience-client/package.json
+++ b/convenience-client/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^7.5.5",
     "pinia": "^2.0.11",
     "sass": "^1.49.4",
     "vue": "^3.2.25",
