--- a/convenience-client/package.json
+++ b/convenience-client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^7.5.5",
+    "axios": "^0.26.0",
     "pinia": "^2.0.11",
     "sass": "^1.49.4",
     "vue": "^3.2.25",
